# RustyHearts

./: README.md
py/: .gitignore  about.txt  app.py  buildozer.spec  capi.py  cards.py  cards_test.py  hearts.py  main.py  requirements.txt  round.py  settings.json  stats.py  storage.py  ui.py
py/assets/: about.txt
rust/: Cargo.toml  ffi_test.py
rust/src/: card.rs  hearts.rs  hearts_ai.rs  hearts_json.rs  main.rs  main_ai_rounds.rs  main_api.rs  main_console.rs  main_json.rs
