[package]
name = "hearts"
version = "0.1.0"
authors = ["Brian Nenninger <bnenning@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "hearts_console"
path = "src/main_console.rs"

[[bin]]
name = "hearts_ai_rounds"
path = "src/main_ai_rounds.rs"

[[bin]]
name = "hearts_json"
path = "src/main_json.rs"
