[package]
name = "hearts"
version = "1.0.1"
authors = ["Brian Nenninger <bnenning@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.98"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[[bin]]
name = "hearts_console"
path = "src/main_console.rs"

[[bin]]
name = "hearts_ai_rounds"
path = "src/main_ai_rounds.rs"

[[bin]]
name = "hearts_json"
path = "src/main_api.rs"

[lib]
name = "hearts"
path = "src/main_api.rs"
crate-type = ["cdylib"]